<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rb1_gazebo</name>
  <version>0.0.0</version>
  <description>RB1 Gazebo package</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>GPL-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rb1_description</depend>
  <depend>rb1_navigation</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
  </export>
</package>