<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rb1_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mgons@unileon.es">miguel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>dwb_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>